--- a/html/plantSample/pSMain.html
+++ b/html/plantSample/pSMain.html
@@ -15,44 +15,44 @@
 		</header>
 		<div class="mui-content">
 			<ul class="mui-table-view mui-grid-view mui-grid-9">
-				<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="addVariety.html">
+				<!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="addVariety.html">
 					<a href="#">
 						<span class="iconfont icon-weihu"></span>
 						<div class="mui-media-body">添加品种</div>
 					</a>
-				</li>
+				</li>-->
 				<!--main2.html-->
-				<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="addApplyFertileWay.html">
+				<!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="addApplyFertileWay.html">
 					<a href="#">
 						<span class="iconfont icon-gongjulan_zhangai"></span>
 						<div class="mui-media-body">添加施肥种类及方法</div>
 					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="setFieldLayouttest.html">
+				</li>-->
+				<!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="setFieldLayouttest.html">
 					<a href="#">
 						<span class="iconfont icon-weixiu"></span>
 						<div class="mui-media-body">种植规划图</div>
 					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="../test.html">
+				</li>-->
+				<!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="../test.html">
 					<a href="#">
 						<span class="iconfont icon-xietiaobangong"></span>
 						<div class="mui-media-body">test</div>
 					</a>
-				</li>
+				</li>-->
 			   <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="layout.html">
 					<a href="#">
 						<span class="iconfont icon-danyuangetianbao" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
 						<div class="mui-media-body">layout界面</div>
 					</a>
 				</li>
-			   <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="addGridInfoTest.html">
+			   <!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="addGridInfoTest.html">
 					<a href="#">
 						<span class="iconfont icon-danyuangetianbao" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
 						<div class="mui-media-body">子页面</div>
 					</a>
-				</li>
-			   <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="layoutTest.html">
+				</li>-->
+			   <!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="layoutTest.html">
 					<a href="#">
 						<span class="iconfont icon-danyuangetianbao" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
 						<div class="mui-media-body">layoutTest界面</div>
@@ -63,19 +63,19 @@
 						<span class="iconfont icon-danyuangetianbao" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
 						<div class="mui-media-body">地图测试</div>
 					</a>
-				</li>
+				</li>-->
 			   <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="layoutShow.html">
 					<a href="#">
 						<span class="iconfont icon-danyuangetianbao" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
 						<div class="mui-media-body">规划图展示</div>
 					</a>
 				</li>
-			   <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="dealPicture.html">
+			   <!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="dealPicture.html">
 					<a href="#">
 						<span class="iconfont icon-danyuangetianbao" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
 						<div class="mui-media-body">图片水印测试</div>
 					</a>
-				</li>
+				</li>-->
 			</ul>
 		</div>
 		<canvas id="myCanvas" width="1000" height="500" >
