--- a/html/plantSample/layout.html
+++ b/html/plantSample/layout.html
@@ -126,7 +126,7 @@
 								for(var i = 0; i < gridSpad.length; i++) {
 									var istr = (i + 1).toString();
 									var gridSD = document.getElementById(istr);
-									gridSD.innerHTML = gridSH.getAttribute('id') + "<h5>植株高度：" + gridSpad[i].plHeightTemp + "cm</h5>";
+									gridSD.innerHTML = gridSD.getAttribute('id') + "<h5>SPAD：" + gridSpad[i].spadDataTemp + "</h5>";
 								}
 							})
 
