--- a/html/plantSample/layoutShowDetail.html
+++ b/html/plantSample/layoutShowDetail.html
@@ -17,6 +17,7 @@
 		<ul class="mui-table-view" id="clist">
 		</ul>
 	</div>
+	<button id='upload' type="button" class="mui-btn mui-btn-block mui-btn-primary">上传此条数据</button>
 
 	<body>
 		<script type="text/javascript" src="../../js/mui.min.js"></script>
@@ -36,8 +37,33 @@
 						grids[i].innerHTML = grids[i].getAttribute('id') + "<h5>品种：" + dataJson.gridsDatas[j].gridsData[i].varietyTem + "</h5>" + "<h5>肥料：" + dataJson.gridsDatas[j].gridsData[i].manureTem + "</h5>" + "<h5>施肥方法：" + dataJson.gridsDatas[j].gridsData[i].manureWayTem + "</h5>";
 					}
 				}
-				
-				
+				var uploadTime = app.utils.dateFormat(new Date(), "yyyy-MM-dd HH:mm:ss").toString();
+				var thisData = JSON.stringify(dataJson.gridsDatas[index]);
+				console.log("此条数据" + typeof(uploadTime) + uploadTime + typeof(thisData) + thisData);
+				var sub = document.getElementById('upload');
+				var postData = {
+					"upltime":uploadTime,
+					"message":thisData
+				};
+				sub.addEventListener('tap', function() {
+					mui.toast("数据上传成功");
+					mui.ajax('http://172.25.141.161:8888/addOne', {
+						data: postData,
+						headers: {
+							'Content-Type': 'application/json'
+						},
+						dataType: 'text', //服务器返回文本格式数据
+						type: 'POST', //HTTP请求类型
+						success: function(data) {
+							console.log(data);
+						},
+						error: function(xhr, type, errorThrown) {
+							//异常处理
+							console.log(type + '-' + errorThrown + '-' + xhr);
+						}
+					});
+				})
+
 			});
 		</script>
 	</body>
