--- a/html/plantSample/pSMain.html
+++ b/html/plantSample/pSMain.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav" style="padding-right: 15px;">
-			<a class="iconfont icon-wode1 mui-icon-right-nav mui-pull-right mui-openwindow" openwindow="account.html" style="line-height: 44px;"></a>
+			<a class="mui-icon mui-icon-more mui-spin mui-icon-right-nav mui-pull-right mui-openwindow" openwindow="clearData.html" style="line-height: 44px;"></a>
 			<h1 class="mui-title">主页</h1>
 		</header>
 		<div class="mui-content">
@@ -42,8 +42,8 @@
 				</li>-->
 			   <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="layout.html">
 					<a href="#">
-						<span class="iconfont icon-danyuangetianbao" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
-						<div class="mui-media-body">layout界面</div>
+						<span class="mui-icon mui-icon-compose" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
+						<div class="mui-media-body">采样模块</div>
 					</a>
 				</li>
 			   <!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="addGridInfoTest.html">
@@ -66,8 +66,8 @@
 				</li>-->
 			   <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="layoutShow.html">
 					<a href="#">
-						<span class="iconfont icon-danyuangetianbao" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
-						<div class="mui-media-body">规划图展示</div>
+						<span class="mui-icon mui-icon-list" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
+						<div class="mui-media-body">规划图管理</div>
 					</a>
 				</li>
 			   <!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="dealPicture.html">
