--- a/html/plantSample/pSMain.html
+++ b/html/plantSample/pSMain.html
@@ -70,10 +70,16 @@
 						<div class="mui-media-body">规划图管理</div>
 					</a>
 				</li>
-			   <!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="dealPicture.html">
+			   <!--<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="../theOther/index.html">
+					<a href="#">
+						<span class="mui-icon mui-icon-mic" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
+						<div class="mui-media-body">语音采样(测试)</div>
+					</a>
+				</li>
+				<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3 mui-openwindow" openwindow="../webUpdate/update.html">
 					<a href="#">
 						<span class="iconfont icon-danyuangetianbao" style="color: #FF701A;font-size: 40px;line-height: 34px;"></span>
-						<div class="mui-media-body">图片水印测试</div>
+						<div class="mui-media-body">update</div>
 					</a>
 				</li>-->
 			</ul>
