--- a/html/plantSample/setFieldLayouttest.html
+++ b/html/plantSample/setFieldLayouttest.html
@@ -98,8 +98,8 @@
 					<span class="mui-icon mui-icon mui-icon-location my-search" id="location"></span>
 				</div>
 				<div class="mui-input-row">
-					<label>采样负责人<span class="must-flag"></span>：</label>
-					<input id="samplingMan" type="text" class="mui-input-clear" placeholder="采样负责人" validate-rule="required" />
+					<label>采样代号<span class="must-flag"></span>：</label>
+					<input id="samplingMan" type="text" class="mui-input-clear" placeholder="采样代号" validate-rule="required" />
 				</div>
 				<button id='submit' type="button" class="mui-btn mui-btn-block mui-btn-red">设定完成</button>
 			</form>
